--- a/cog.yaml
+++ b/cog.yaml
@@ -12,11 +12,10 @@ build:
     - "diffusers==0.18.2"
     - "accelerate==0.18.0"
     - "opencv-python==4.7.0.68"
-    - "carvekit_colab==4.1.0"
     - "controlnet_aux==0.0.3"
-    - "compel==1.2.1"
     - "huggingface_hub"
     - "tqdm"
+    - "matplotlib"
 
 # predict.py defines how predictions are run on your model
 predict: "predict.py:Predictor"
