--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-# torch==2.0.1
+torch==2.0.1
 transformers==4.28.1
 diffusers==0.18.2
 accelerate==0.18.0
 opencv-python==4.7.0.68
-carvekit_colab==4.1.0
 controlnet_aux==0.0.3
-compel==1.2.1
 huggingface_hub
 tqdm
+matplotlib
